<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.att.training</groupId>
    <artifactId>spring-boot-examples</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.0.1-SNAPSHOT</revision>
        <java.version>21</java.version>
        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
        <argLine>
            --enable-preview
            -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
            -Xshare:off
        </argLine>
        <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <spring-cloud-azure-dependencies.version>5.23.0</spring-cloud-azure-dependencies.version>
        <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
        <mockwebserver.version>5.1.0</mockwebserver.version>
        <redisson.version>3.50.0</redisson.version>
        <testcontainers-redis.version>2.2.4</testcontainers-redis.version>
        <datasource-decorator.version>1.12.0</datasource-decorator.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.azure.spring</groupId>
                <artifactId>spring-cloud-azure-dependencies</artifactId>
                <version>${spring-cloud-azure-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver3</artifactId>
                <version>${mockwebserver.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>abstract-datasource</module>
        <module>composition-vs-inheritance</module>
        <module>context-propagation</module>
        <module>spring-concurrency</module>
        <module>spring-kafka</module>
        <module>spring-kafka-postgres</module>
        <module>spring-properties</module>
        <module>structured-logging</module>
        <module>http-clients</module>
        <module>spring-libs</module>
        <module>oracle-jdbc</module>
        <module>feature-management</module>
        <module>spring-cloud-gateway-mvc</module>
        <module>spring-cache-redis</module>
        <module>spring-redisson</module>
        <module>multiple-object-mappers</module>
        <module>azure-service-bus</module>
        <module>azure-event-hubs</module>
        <module>spring-task-execution-and-scheduling</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
